fix: [SRM-9541]: Fixed slo-graph alignment (#7878)
* fix: [SRM-9541]: Fixed slo-graph alignment

* feat: [SRM-9541]: Covered Jest branch

--- a/src/modules/85-cv/pages/slos/components/CVCreateSLO/CVCreateSLO.module.scss
+++ b/src/modules/85-cv/pages/slos/components/CVCreateSLO/CVCreateSLO.module.scss
@@ -67,7 +67,7 @@
 // SLOTargetAndBudgetPolicy
 
 .card {
-  width: 100%;
+  min-width: 100%;
 
   .sloTarget {
     width: 120px;
